--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Distributed File Storage</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
   </head>
   <body>
     <div class="container">
-      <h1>Distributed File Storage System</h1>
+      <div class="app-header">
+        <div class="app-logo">📊</div>
+        <h1>Distributed File Storage</h1>
+      </div>
 
       <div class="card">
         <h2>Upload File</h2>
